[gd_scene load_steps=14 format=3 uid="uid://3y2qrdia6ibw"]

[ext_resource type="Script" path="res://tools/minigame_holder.gd" id="1_n0r2x"]
[ext_resource type="Script" path="res://tools/viewport_container.gd" id="2_igrff"]
[ext_resource type="Script" path="res://tools/multi_pass_shader_material.gd" id="3_0ourw"]
[ext_resource type="Shader" path="res://resources/shaders/canvas_item/clear_shader_canvas_item.gdshader" id="4_gv6bs"]
[ext_resource type="Script" path="res://resources/shaders/shader_pass.gd" id="5_74rug"]
[ext_resource type="Shader" path="res://resources/shaders/canvas_item/blur.gdshader" id="6_jepxf"]
[ext_resource type="Script" path="res://tools/timers.gd" id="7_la17s"]
[ext_resource type="Texture2D" uid="uid://bs54kw4ef5h21" path="res://assets/ui/Mini Game Frame.png" id="8_1a71k"]
[ext_resource type="Texture2D" uid="uid://dki4a7c8ecavm" path="res://assets/ui/Score and Timer.png" id="9_gte81"]
[ext_resource type="Texture2D" uid="uid://c875qeheydn86" path="res://assets/ui/goldcircle.png" id="10_yuu0a"]
[ext_resource type="FontFile" uid="uid://drk6ai4vky8ih" path="res://assets/ui/Halant-Bold.ttf" id="11_61o8d"]

[sub_resource type="Resource" id="Resource_w7bdg"]
script = ExtResource("5_74rug")
name = &"Blur"
shader = ExtResource("6_jepxf")
is_enabled_by_default = false
is_unique_pass = false
default_uniforms = {
"directions": null,
"duration": null,
"end_size": null,
"noise_factor": null,
"quality": null,
"start_size": null,
"start_time": null
}
priority_overwrite = 999

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mlib5"]
shader = ExtResource("4_gv6bs")
script = ExtResource("3_0ourw")
is_canvas_item = true
shader_passes = Array[ExtResource("5_74rug")]([SubResource("Resource_w7bdg")])

[node name="MinigameHolder" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_n0r2x")

[node name="Game" type="SubViewportContainer" parent="."]
layout_mode = 1
offset_left = -800.0
offset_top = -444.0
offset_right = 800.0
offset_bottom = 456.0
script = ExtResource("2_igrff")

[node name="ScreenSpace" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_mlib5")
layout_mode = 2
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
metadata/_edit_use_anchors_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
script = ExtResource("7_la17s")

[node name="TextureRect" type="TextureRect" parent="UI"]
layout_mode = 0
offset_left = 160.0
offset_top = 96.0
offset_right = 1760.0
offset_bottom = 996.0
texture = ExtResource("8_1a71k")

[node name="GameTimer" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 256.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="UI/GameTimer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 448.0
offset_top = -58.0
offset_right = 1150.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_gte81")

[node name="GameTime" type="Timer" parent="UI/GameTimer"]

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/GameTimer"]
layout_mode = 0
offset_left = 835.0
offset_top = 38.0
offset_right = 955.0
offset_bottom = 158.0
max_value = 1.0
step = 0.0
value = 1.0
fill_mode = 5
texture_progress = ExtResource("10_yuu0a")

[node name="TimeLabel" type="Label" parent="UI/GameTimer"]
layout_mode = 0
offset_left = 959.0
offset_top = 48.0
offset_right = 1151.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.360784, 0.262745, 0.101961, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("11_61o8d")
theme_override_font_sizes/font_size = 64
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartTimer" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 256.0
mouse_filter = 2

[node name="StartTime" type="Timer" parent="UI/StartTimer"]

[node name="Label" type="Label" parent="UI/StartTimer"]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 1664.0
offset_bottom = 896.0
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.32549, 0.262745, 0.101961, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("11_61o8d")
theme_override_font_sizes/font_size = 200
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 703.0
offset_top = 112.0
offset_right = 895.0
offset_bottom = 214.0
theme_override_colors/font_color = Color(0.898039, 0.858824, 0.760784, 1)
theme_override_colors/font_outline_color = Color(0.360784, 0.262745, 0.101961, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("11_61o8d")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gameOver" from="UI" to="." method="_on_ui_game_over"]
[connection signal="startTimeOver" from="UI" to="UI" method="_on_start_time_over"]
[connection signal="timeout" from="UI/GameTimer/GameTime" to="UI" method="_on_game_time_timeout"]
[connection signal="timeout" from="UI/StartTimer/StartTime" to="UI" method="_on_start_time_timeout"]
